added priority to logo images

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,3 +71,11 @@ td, th{
     padding-left: 20px !important;
   }
 }
+@media screen and (max-width:350px){
+  .contentExpanded{
+    padding-left: 10px !important;
+  }
+  .contentNotExpanded{
+    padding-left: 10px !important;
+  }
+}
