--- a/src/Style/Dashboard style/summary.module.css
+++ b/src/Style/Dashboard style/summary.module.css
@@ -1,5 +1,5 @@
 .summary{
-  padding-right: 50px;
+  padding-right: 30px;
 }
 .greeting{
   font-size: 36px;
@@ -43,14 +43,8 @@
     font-size: 10px;
   }
   .figuresCard{
-    gap: 10px;
     padding: 14px;
-    /* color: #bebebe; */
    }
-  /* .figuresImage{
-    padding: 5px !important;
-    width: 30px;
-   } */
 }
 @media screen and (max-width:709px){
   .summary{
@@ -67,6 +61,9 @@
     font-size: 26px;
     padding: 0px 0px;
   }
+  .summary{
+    padding-right: 10px;
+  }
 }
 @media screen and (max-width:639px){
    .greeting{
@@ -81,5 +78,13 @@
   }
   .figuresTitle{
     font-size: 13px;
+  }
+  .summary{
+    padding-right: 20px;
+  }
+}
+@media screen and (max-width:350px){
+  .summary{
+    padding-right: 10px;
   }
 }
