--- a/src/Style/Dashboard style/settings.module.css
+++ b/src/Style/Dashboard style/settings.module.css
@@ -3,13 +3,13 @@
   padding-top:20px ;
   transition: 0.5s;
 }
+.menu{
+  width: 30%;
+}
 .title{
   font-size: 14px;
   font-weight: 700;
   padding-bottom: 5px;
-}
-.title:hover{
-  color:black
 }
 .title:hover{
   color:black
@@ -32,4 +32,33 @@
 .settingItem:hover {
   background-color: rgba(0, 0, 0, 0.02);
   border-radius: 20px
+}
+
+.output{
+  padding: 24px;
+  border-radius: 20px;
+  width: 70%;
+}
+.outputTitle{
+  font-size: 24px;
+  font-weight: 700;
+  padding-bottom: 10px;
+}
+.dp{
+  width: 109px;
+  height: 109px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 100%;
+  margin: 10px 0;
+}
+
+.fProfile{
+  font-size: 16px;
+  font-weight: 500;
+}
+.fProfile p:first-child{
+  color:rgba(0, 0, 0, 0.5);
+  padding-bottom: 20px;
 }
