--- a/src/Style/Dashboard style/settings.module.css
+++ b/src/Style/Dashboard style/settings.module.css
@@ -4,7 +4,7 @@
   transition: 0.5s;
 }
 .menu{
-  width: 30%;
+  width: 40%;
 }
 .title{
   font-size: 14px;
@@ -37,7 +37,8 @@
 .output{
   padding: 24px;
   border-radius: 20px;
-  width: 70%;
+  width: 65%;
+  max-width: 706px;
 }
 .outputTitle{
   font-size: 24px;
@@ -61,4 +62,38 @@
 .fProfile p:first-child{
   color:rgba(0, 0, 0, 0.5);
   padding-bottom: 20px;
+}
+
+
+
+@media screen and (max-width:800px){
+  .component{
+    padding: 0px;
+    padding-top:20px ;
+  }
+  .settingItem{
+    padding: 14px;
+    padding-bottom: 0px;
+  }
+  .profileOutput{
+    padding: 14px;
+  }
+  .title{
+    font-size: 10px;
+  }
+  .info{
+    font-size: 7px;
+  }
+  .outputTitle{
+    font-size: 19px;
+    font-weight: 700;
+    padding-bottom: 10px;
+  }
+  .dp{
+    width: 80px;
+    height: 80px;
+  }
+  .fProfile{
+    font-size: 10px;
+  }
 }
