implementing scroll for settings mobile view, not done but have to see why my vs code is causing my computer to lag so  bad

--- a/src/Style/Dashboard style/settings.module.css
+++ b/src/Style/Dashboard style/settings.module.css
@@ -97,3 +97,24 @@
     font-size: 10px;
   }
 }
+
+@media screen and (max-width:500px){
+  .menu{
+    min-width: 92vw;
+    margin-right: 200px;
+  }
+  .output{
+  min-width: 90vw;
+
+}
+}
+@media screen and (max-width:450px){
+  .menu{
+    min-width: 90vw;
+    margin-right: 200px;
+  }
+  .output{
+  min-width: 90vw;
+
+}
+}
