--- a/src/Style/Dashboard style/settings.module.css
+++ b/src/Style/Dashboard style/settings.module.css
@@ -63,6 +63,9 @@
   color:rgba(0, 0, 0, 0.5);
   padding-bottom: 20px;
 }
+.buttonText{
+  font-size: 16px;
+  }
 
 
 
@@ -86,8 +89,6 @@
   }
   .outputTitle{
     font-size: 19px;
-    font-weight: 700;
-    padding-bottom: 10px;
   }
   .dp{
     width: 80px;
@@ -104,25 +105,101 @@
     margin-right: 200px;
   }
   .output{
-  min-width: 90vw;
+  min-width: 85vw;
+  margin-right: 16px;
 
+}
+.settingItem{
+  padding: 24px;
+  padding-bottom: 0px;
+}
+.component{
+  overflow-x: scroll
+}
+.profileOutput{
+  padding: 20px;
+}
+.title{
+  font-size: 12px;
+}
+.info{
+  font-size: 9px;
+}
+.outputTitle{
+  font-size: 24px;
+}
+.dp{
+  width: 109px;
+  height: 109px;
+}
+
+.fProfile{
+  font-size: 16px;
 }
 }
 @media screen and (max-width:450px){
   .menu{
     min-width: 91vw;
-    margin-right: 200px;
   }
+   .output{
+min-width: 80vw;
+  margin-right: 25px;
+}
+
+
+
+
+.buttonText{
+font-size: 10px;
+}
+.profileOutput{
+  padding: 14px;
+}
+
+
+.outputTitle{
+  font-size: 19px;
+}
+.dp{
+  width: 80px;
+  height: 80px;
+}
+.fProfile{
+  font-size: 10px;
+}
+}
+@media screen and (max-width:425px){
+   .output{
+  margin-right: 23px;
+}
 }
 @media screen and (max-width:400px){
   .menu{
     min-width: 90vw;
-    margin-right: 200px;
   }
+     .output{
+  margin-right: 20px;
+
+}
+}
+@media screen and (max-width:375px){
+  .output{
+ margin-right: 18px;
+}
 }
 @media screen and (max-width:350px){
   .menu{
     min-width: 94vw;
-    margin-right: 200px;
   }
+  .output{
+    margin-right: 23px;
+   }
+
+}
+@media screen and (max-width:325px){
+
+  .output{
+    margin-right: 21px;
+   }
+
 }
