added back button for settings scroll

--- a/src/Style/Dashboard style/settings.module.css
+++ b/src/Style/Dashboard style/settings.module.css
@@ -37,10 +37,12 @@
 }
 
 .output{
-  padding: 24px;
-  border-radius: 20px;
   width: 65%;
   max-width: 706px;
+}
+.profileOutput{
+  border-radius: 20px;
+  padding: 24px;
 }
 .outputTitle{
   font-size: 24px;
