--- a/src/Style/Dashboard style/settings.module.css
+++ b/src/Style/Dashboard style/settings.module.css
@@ -70,6 +70,9 @@
 .buttonText{
   font-size: 16px;
   }
+  .d500{
+    display: none;
+  }
 
 
 
@@ -140,6 +143,9 @@
 
 .fProfile{
   font-size: 16px;
+}
+.d500{
+  display: flex;
 }
 }
 @media screen and (max-width:450px){
