--- a/src/Style/Dashboard style/settings.module.css
+++ b/src/Style/Dashboard style/settings.module.css
@@ -36,13 +36,16 @@
   border-radius: 20px
 }
 
-.output{
-  width: 65%;
-  max-width: 706px;
-}
-.profileOutput{
+.innerOutput{
   border-radius: 20px;
   padding: 24px;
+}
+.outerOutput{
+  width: 65%;
+  max-width: 775px;
+  /* max-width: 706px; */
+}
+.profileOutput{
 }
 .outputTitle{
   font-size: 24px;
@@ -86,6 +89,9 @@
     padding-bottom: 0px;
   }
   .profileOutput{
+    /* padding: -14px; */
+  }
+  .innerOutput{
     padding: 14px;
   }
   .title{
@@ -111,10 +117,13 @@
     min-width: 92vw;
     margin-right: 200px;
   }
-  .output{
+  .outerOutput{
   min-width: 85vw;
   margin-right: 20px;
-
+  padding: 20px;
+}
+  .innerOutput{
+  padding: 20px;
 }
 .settingItem{
   padding: 24px;
@@ -125,7 +134,7 @@
   /* width:103%; */
 }
 .profileOutput{
-  padding: 20px;
+  /* padding: 20px; */
 }
 .title{
   font-size: 12px;
@@ -155,6 +164,17 @@
    .output{
 min-width: 80vw;
   margin-right: 25px;
+
+  padding: 14px;
+}
+
+
+.outerOutput{
+  min-width: 80vw;
+  margin-right: 25px;
+}
+  .innerOutput{
+  padding: 14px;
 }
 
 
@@ -164,7 +184,7 @@ min-width: 80vw;
 font-size: 10px;
 }
 .profileOutput{
-  padding: 14px;
+  /* padding: 14px; */
 }
 
 
@@ -180,7 +200,7 @@ font-size: 10px;
 }
 }
 @media screen and (max-width:425px){
-   .output{
+   .outerOutput{
   margin-right: 23px;
 }
 }
@@ -194,7 +214,7 @@ font-size: 10px;
 }
 }
 @media screen and (max-width:375px){
-  .output{
+  .outerOutput{
  margin-right: 18px;
 }
 }
@@ -202,14 +222,14 @@ font-size: 10px;
   .menu{
     min-width: 94vw;
   }
-  .output{
+  .outerOutput{
     margin-right: 23px;
    }
 
 }
 @media screen and (max-width:325px){
 
-  .output{
+  .outerOutput{
     margin-right: 21px;
    }
 
