finished changed password

--- a/src/Style/Dashboard style/changepassword.module.css
+++ b/src/Style/Dashboard style/changepassword.module.css
@@ -2,38 +2,41 @@
   padding-top: 30px;
 }
 
-.form input[type=password]{
+.form input{
   padding: 20px;
   background-color: rgba(0, 0, 0, 0.13);
   margin-bottom: 20px;
   border-radius: 20px 0 0 20px;
   width: 80%;
+  font-size: 10px;
 }
-.form input[type=text]{
-  padding: 20px 10px 20px 0px;
+.form input[type=email]{
+  padding: 22px 10px 22px 0px;
   background-color: rgba(0, 0, 0, 0.13);
   margin-bottom: 20px;
   border-radius: 0 20px 20px 0;
   width: 6%;
   cursor: pointer;
+  font-size: 7px;
 }
 
 
 
 
 @media screen and (max-width: 1280px){
-  .form input[type=text]{
+  .form input[type=email]{
     width: 10%;
-    padding: 20px 0px 20px 0px;
+    padding: 22px 0px 22px 0px;
   }
 }
-@media screen and (max-width: 860px){
-  .form input[type=text]{
-    width: 15%;
+@media screen and (max-width: 900px){
+  .form input[type=email]{
+    width: 12.5%;
+    font-size: 7.5px;
   }
 }
 @media screen and (max-width: 330px){
-  .form input[type=text]{
-    padding: 20px 0px 20px 0px;
+  .form input[type=email]{
+    font-size: 7px;
   }
 }
