--- a/src/Style/Dashboard style/table.module.css
+++ b/src/Style/Dashboard style/table.module.css
@@ -10,3 +10,10 @@
   padding: 5000px;
   /* border-left: 1px solid rgb(195, 194, 196); */
 }
+
+.success{
+  color: green;
+}
+.failed{
+  color: red;
+}
