--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,7 +53,7 @@ body{
 .td, th{
   position: relative;
   padding: 10px;
-  z-index: 999;
+  /* z-index: 999; */
 }
 .td::after, th::after{
   content: '';
