remove dp:hover

--- a/src/Style/Dashboard style/dashbar.module.css
+++ b/src/Style/Dashboard style/dashbar.module.css
@@ -31,9 +31,9 @@
   padding: 20px;
   transition: 1s linear;
 }
-.dp:hover{
+/* .dp:hover{
    transform: scale(2);
-}
+} */
 
 @media screen and (max-width:670px){
   .header{
